[package]
name = "climer"
version = "0.3.1"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "CLI timer app"
readme = "README.md"
repository = "https://github.com/Noah2610/climer"
keywords = ["timer", "cli", "command-line"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
regex = "1.1.0"
climer_derive = { path = "./climer_derive", version = "0.1.0" }
clap = { version = "2.32.0", optional = true }

[features]
cli = ["clap"]

[[bin]]
name = "climer"
path = "app/main.rs"
required-features = ["cli"]
